--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,13 @@
             <version>2.11.0</version>
         </dependency>
 
+        <!-- apache.commons-lang3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.7</version>
+        </dependency>
+
     </dependencies>
 
     <build>
